堆永久区分配参数